frontend/scss/molecules/_m-listing.scss
/* ... */
.o-pinboard__item .m-listing__meta {
  min-height: 0;
}


// variant `m-listing` thats also a `.o-feature-plus-4__feature`

.o-feature-plus-4__feature .m-listing__meta {
  text-align: center;
}

.o-feature-plus-4__feature .m-listing__meta .f-tag {
  @include tucked-margin-top($f-tag, ('xsmall': 44, 'small+': 52, 'medium+': 60));
}

.o-feature-plus-4__feature .f-headline-editorial{
  @include tucked-margin-top($f-headline-editorial, ('xsmall': 40, 'small+': 60, 'medium+': 52, 'large': 60));
}

.o-feature-plus-4__feature .m-listing__meta .f-body-editorial {
  @include tucked-margin-top($f-body-editorial, ('xsmall': 44, 'small+': 52, 'medium+': 56));
}

// variant `m-listing` that expects the image to be on the left, not the right, and optionally absent
.m-listing--rtl {
  flex-flow: column nowrap;
}

.m-listing--rtl .m-listing__link {
  flex: 0 1 auto;

  align-items: flex-start;
  align-content: flex-start;

  flex-flow: row-reverse wrap;
  max-width: 100%;
}

.m-listing--rtl .m-listing__title {
  flex-basis: 100%;
  margin-bottom: 16px;
}

.m-listing--rtl .m-listing__meta {
  width: 100%;
  margin-right: 0;
}

// remove tucked-margin-top
.m-listing--inline.m-listing--rtl .m-listing__meta .f-secondary {
  margin-top: 0;

  &:before, &:after {
    content: none;
  }
}

.m-listing--rtl .m-listing__img {
  margin-top: 0;

  @include breakpoint('medium-') {
    width: 100%;
  }

  @include breakpoint('large+') {
    @include tucked-margin-top($f-secondary, ('xsmall': 36));
    margin-right: colspan(0.5);
  }
}

@include breakpoint('small') {

  .m-listing--rtl .m-listing__img {
    order: 1;
    flex-basis: 100%;
    margin-top: 0;
    margin-right: 0;
  }

  .m-listing--rtl .m-listing__title {
    order: 2;
    margin-top: 10px;
  }

  .m-listing--rtl .m-listing__meta {
    order: 3;
    flex-basis: 100%;
  }
}


// adding gradients to homepage features and selections
@mixin m-listing__img__overlay {
  position: absolute;
  top: 0;

  z-index: 2;
  padding: 32px;
  width: 100%;
  height: 33%;

  text-align: right;

  background: linear-gradient(
    to bottom,
    $color__black--85,
    transparent
  );
}

.m-listing--selection .m-listing__img .m-listing__img__overlay {
  @include m-listing__img__overlay;
}

.m-listing--feature .m-listing__img .m-listing__img__overlay {
  @include breakpoint('medium+') {
    @include m-listing__img__overlay;
  }
}

// variant `m-listing--closer-look .o-blocks__block` for block_editor
.m-listing--closer-look.o-blocks__block:after {
  content: '';
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  height: 1px;
  width: 100%;
  background: $color__rules--primary;
}

.m-listing--label.o-blocks__block .m-listing__meta {
  min-height: 139px;
}

.m-listing--label.o-blocks__block .f-tag {
  margin-top: 20px;
}

.m-listing--label.o-blocks__block .f-list-4 {
  margin-top: 15px;
}

